fixing unit tests compilation